# epubinfo

./: .gitignore  LICENSE  README.md  default.nix  ebook-metadata.cabal  epub2json.cabal  epubinfo.cabal  flake.nix  package.yaml  renovate.json  setup-hooks.nix  shell.nix  treefmt.nix
.github/workflows/: build.yml  check-format.yml  update.yml
app/: Main.hs
nix/: sources.json  sources.nix
src/: EPUB2JSON.hs  EPUBInfo.hs  EbookMetadata.hs  Main.hs
src/EPUB2JSON/: Document.hs  Monad.hs  Parse.hs  Types.hs
src/EPUB2JSON/Document/: Container.hs  Opf.hs
src/EPUBInfo/: Document.hs  FetchMetadata.hs  Monad.hs  Toc.hs  Utils.hs
src/EPUBInfo/Document/: Container.hs  Nav.hs  Ncx.hs  Opf.hs
src/EbookMetadata/: EPUB.hs
src/EbookMetadata/EPUB/: Parse.hs  Types.hs
test/: Main.hs
test/EbookMetadata/: EPUBSpec.hs
