name:                ebook-metadata
synopsis:            Parse metadata from ebooks, e.g. EPUB
version:             0.0.1.0
homepage:            https://github.com/akirak/ebook-metadata
license:             BSD3
author:              Akira Komamura
maintainer:          Akira Komamura
copyright:           Akira Komamura
category:            codec
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     EbookMetadata
  ghc-options:         -Wall -fno-warn-name-shadowing
  build-depends:       base >= 4.11 && < 5

executable ebook-metadata
  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  ghc-options:        -threaded -O2
  build-depends:      base
                    , ebook-metadata

test-suite ebook-metadata-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  build-depends:    base >=4.11 && < 5
                  , ebook-metadata
                  , hedgehog
